<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B980D81B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/title_text"
        android:textColor="#17312E"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <ImageView
        android:id="@+id/logo"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/apple"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/apple_logo" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="15dp"
        android:background="@drawable/row_bg"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        
        <EditText
            android:id="@+id/foodEditText"
            android:padding="15dp"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_food"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/caloriesEditText"
            android:padding="15dp"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:hint="@string/hint_calories"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/submitButton"
            android:layout_marginTop="20dp"
            android:text="@string/submit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>